--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <!-- Basic Page Needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>GlossynRails</title>
+    <title>Glossyn&</title>
     <%= csrf_meta_tags %>
     <meta name="description" content="glossy_n site by draconian">
 	  <meta name="author" content="draconian">
