--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -10,23 +10,23 @@
       <div class="menu light"> <!-- menu start --> <!-- ADD CLASS LIGHT ON MENU TO CHANGE MENU TO LIGHT SCHEME -->
         <ul> 
           <li> 
-            <a href="index.html" class="curent-multi-page">Work</a> <!-- main links -->
-            <ul class="normal-sub">
+            <a href="/" class="current-multi-page">Glossy&</a> <!-- main links -->
+            <%# <ul class="normal-sub">
               <li><a href="index1.html" class="curent-multi-page">2 columns</a></li>
-              <li><a href="index.html">3 columns</a></li>
+              <li><a href="/">3 columns</a></li>
               <li><a href="index2.html">case study</a></li>
               <li><a href="index3.html">intro slider</a></li>
               <li><a href="index4.html">text rotator</a></li>
-            </ul>
+            </ul> %>
           </li>
           <li>
-            <a href="about.html">About</a> <!-- main links -->
+            <a href="/about">About</a> <!-- main links -->
           </li>
           <li>
-            <a href="blog.html">Journal</a> <!-- main links -->
+            <a href="/product">Products</a> <!-- main links -->
           </li>
           <li>
-            <a href="contact.html">Contact</a> <!-- main links -->
+            <a href="/contact">Contact</a> <!-- main links -->
           </li>
         </ul>
       </div>
@@ -44,7 +44,7 @@
   <div class="page-center-wrap">
     <div class="container">
       <div class="twelve columns">
-        <div class="home-big-text" id="rev-load-1">The Litae</div>
+        <div class="home-big-text" id="rev-load-1">Glossy&</div>
         <br/>
         <div class="home-small-text" id="rev-load-2">We help companies and startups from all over the world<br/>materialize their ideas into great projects.</div>
       </div>
@@ -61,14 +61,14 @@
       <div id="portfolio-filter" class="portfolio-filter">
         <ul id="filter">
           <li><a href="#" class="current" data-filter="*" title="">all</a></li>
-          <li class="tipped" data-title="3 projects" data-tipper-options='{"direction":"top","follow":"true","margin":35}'><a href="#" data-filter=".branding" title="">branding</a></li>
-          <li class="tipped" data-title="3 projects" data-tipper-options='{"direction":"top","follow":"true","margin":35}'><a href="#" data-filter=".photo" title="">photo</a></li>
-          <li class="tipped" data-title="4 projects" data-tipper-options='{"direction":"top","follow":"true","margin":35}'><a href="#" data-filter=".motion" title="">motion</a></li>
+          <li class="tipped" data-title="3 projects" data-tipper-options='{"direction":"top","follow":"true","margin":35}'><a href="#" data-filter=".beauty_c_tool" title="">beauty c tool</a></li>
+          <li class="tipped" data-title="3 projects" data-tipper-options='{"direction":"top","follow":"true","margin":35}'><a href="#" data-filter=".candle" title="">candle</a></li>
+          <li class="tipped" data-title="4 projects" data-tipper-options='{"direction":"top","follow":"true","margin":35}'><a href="#" data-filter=".life" title="">life</a></li>
         </ul>
       </div>
         
       <div id="projects-grid">
-        <a href="project.html">
+        <a href="/product">
           <div class="portfolio-box-1 half-width branding">
             <div id="rev-1">
               <div class="content__image-wrap">
@@ -84,7 +84,7 @@
             </div>
           </div>
         </a>
-        <a href="project.html">
+        <a href="/product">
           <div class="portfolio-box-1 half-width photo">
             <div id="rev-4">
               <div class="content__image-wrap">
@@ -100,7 +100,7 @@
             </div>
           </div>
         </a>
-        <a href="project.html">
+        <a href="/product">
           <div class="portfolio-box-1 half-width motion">
             <div id="rev-7">
               <div class="content__image-wrap">
@@ -116,7 +116,7 @@
             </div>
           </div>
         </a>
-        <a href="project.html">
+        <a href="/product">
           <div class="portfolio-box-1 half-width branding">
             <div id="rev-10">
               <div class="content__image-wrap">
@@ -132,7 +132,7 @@
             </div>
           </div>
         </a>
-        <a href="project.html">
+        <a href="/product">
           <div class="portfolio-box-1 half-width photo">
             <div id="rev-13">
               <div class="content__image-wrap">
@@ -148,7 +148,7 @@
             </div>
           </div>
         </a>
-        <a href="project.html">
+        <a href="/product">
           <div class="portfolio-box-1 half-width motion">
             <div id="rev-16">
               <div class="content__image-wrap">
@@ -164,7 +164,7 @@
             </div>
           </div>
         </a>
-        <a href="project.html">
+        <a href="/product">
           <div class="portfolio-box-1 half-width motion">
             <div id="rev-19">
               <div class="content__image-wrap">
@@ -180,7 +180,7 @@
             </div>
           </div>
         </a>
-        <a href="project.html">
+        <a href="/product">
           <div class="portfolio-box-1 half-width branding">
             <div id="rev-22">
               <div class="content__image-wrap">
@@ -196,7 +196,7 @@
             </div>
           </div>
         </a>
-        <a href="project.html">
+        <a href="/product">
           <div class="portfolio-box-1 half-width motion">
             <div id="rev-25">
               <div class="content__image-wrap">
@@ -212,7 +212,7 @@
             </div>
           </div>
         </a>
-        <a href="project.html">
+        <a href="/product">
           <div class="portfolio-box-1 half-width photo">
             <div id="rev-28">
               <div class="content__image-wrap">
