--- a/public/assets/colors/color.css
+++ b/public/assets/colors/color.css
@@ -13,11 +13,11 @@ ul.slimmenu li a.mPS2id-highlight,
 .menu > ul > li a:hover,
 .menu > ul > li > ul > li p span,
 .menu > ul > li > ul > li a span,
-.menu > ul > li a.curent-multi-page,
-.cbp-af-header.cbp-af-header-shrink .menu > ul > li a.curent-multi-page,
-.menu.light > ul > li a.curent-multi-page,
+.menu > ul > li a.current-multi-page,
+.cbp-af-header.cbp-af-header-shrink .menu > ul > li a.current-multi-page,
+.menu.light > ul > li a.current-multi-page,
 .menu.light > ul > li a:hover,
-.cbp-af-header.cbp-af-header-shrink .menu.light > ul > li a.curent-multi-page,
+.cbp-af-header.cbp-af-header-shrink .menu.light > ul > li a.current-multi-page,
 .menu a span.link-icon,
 .menu > ul > li > ul.normal-sub li a.subtitled,
 .cbp-af-header.cbp-af-header-shrink .menu > ul > li > ul.normal-sub li a.subtitled,
