--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -287,7 +287,7 @@ body.royal_preloader {
 }
 @-o-keyframes scale {
     0% { -o-transform: scale(0); opacity: 0;}
-    50% { -o-transform: scale(2); opacity: 0;.5}
+    50% { -o-transform: scale(2); opacity: 0.5;}
     100% { -o-transform: scale(1); opacity: 1;}
 }
 @keyframes scale {
