--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,18 @@
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'true' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'true' %>
+    <link rel="stylesheet" href="css/base.css"/>
+    <link rel="stylesheet" href="css/skeleton.css"/>
+    <link rel="stylesheet" href="css/layout.css"/>
+    <link rel="stylesheet" href="css/font-awesome.css" />
+    <link rel="stylesheet" href="css/et-line.css"/>
+    <link rel="stylesheet" href="css/ionicons.min.css"/>
+    <link rel="stylesheet" href="css/retina.css"/>
+    <link rel="stylesheet" href="css/owl.carousel.css"/>
+    <link rel="stylesheet" href="css/owl.transitions.css"/>
+    <%# stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'true' %>
+    <%# javascript_include_tag 'application', 'data-turbolinks-track': 'true' %>
+    
   </head>
 
   <body class="royal_preloader">
